hphp/hack/test/typecheck/generic_subtype_mixed_bad.php.exp
File "generic_subtype_mixed_bad.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "generic_subtype_mixed_bad.php", line 4, characters 28-30:
This is an int
File "generic_subtype_mixed_bad.php", line 4, characters 33-34:
It is incompatible with a nonnull value arising from an implicit 'as ?nonnull' constraint on this type
